--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 
 header {
-  background-color: #10ac84;
+  background-color: #150e08;
   padding: 20px 0px;
 }
 header nav {
@@ -19,7 +19,7 @@ header nav a img {
 header nav ul {
   display: flex;
   gap: 30px;
-  color: #124163;
+  color: #fff;
   list-style: none;
 }
 header nav ul li {
