--- a/main.scss
+++ b/main.scss
@@ -26,7 +26,7 @@ header {
         ul {
             display: flex;
             gap: 30px;
-            color: #124163;
+            color: #fff;
             list-style: none;
 
             li {
