--- a/main.css
+++ b/main.css
@@ -72,4 +72,8 @@ header nav ul li:hover {
 }
 .hadding p:hover {
   color: #fff;
+}
+
+.banner img {
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
