--- a/main.css
+++ b/main.css
@@ -13,20 +13,21 @@ header nav {
   justify-content: space-around;
   align-items: center;
 }
-header nav a img {
+header nav a header nav a img {
   width: 200px;
+  filter: invert(1);
 }
-header nav ul {
+header nav a ul {
   display: flex;
   gap: 30px;
   color: #fff;
   list-style: none;
 }
-header nav ul li {
+header nav a ul li {
   font-size: 20px;
   position: relative;
 }
-header nav ul li:after {
+header nav a ul li:after {
   background-color: #fff;
   width: 0%;
   height: 3px;
@@ -35,12 +36,11 @@ header nav ul li:after {
   top: 0;
   bottom: 0;
 }
-header nav ul li:hover {
+header nav a ul li:hover {
   color: #fff;
   cursor: pointer;
 }
-
-.hadding {
+header .hadding {
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -51,29 +51,28 @@ header nav ul li:hover {
   background-size: contain;
   background-repeat: no-repeat;
 }
-.hadding h1 {
+header .hadding h1 {
   color: #10ac84;
   font-size: 4rem;
 }
-.hadding h1:hover {
+header .hadding h1:hover {
   color: #fff;
   transition: 0.7s ease-in-out;
 }
-.hadding h1:hover:after {
+header .hadding h1:hover:after {
   content: "add new";
 }
-.hadding h1:hover:after:hover {
+header .hadding h1:hover:after:hover {
   color: red;
   cursor: pointer;
 }
-.hadding p {
+header .hadding p {
   color: #9b2424;
   font-size: 3rem;
 }
-.hadding p:hover {
+header .hadding p:hover {
   color: #fff;
 }
-
-.banner img {
+header .banner img {
   width: 100%;
 }/*# sourceMappingURL=main.css.map */
