--- a/main.css
+++ b/main.css
@@ -37,42 +37,9 @@ header nav ul li:after {
   bottom: 0;
 }
 header nav ul li:hover {
-  color: #fff;
+  color: #a57318;
   cursor: pointer;
-}
-
-.hadding {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-image: url(../scss/img/banner-bg-1.jpg);
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-.hadding h1 {
-  color: #10ac84;
-  font-size: 4rem;
-}
-.hadding h1:hover {
-  color: #fff;
-  transition: 0.7s ease-in-out;
-}
-.hadding h1:hover:after {
-  content: "add new";
-}
-.hadding h1:hover:after:hover {
-  color: red;
-  cursor: pointer;
-}
-.hadding p {
-  color: #9b2424;
-  font-size: 3rem;
-}
-.hadding p:hover {
-  color: #fff;
+  transition: 0.5s;
 }
 
 .banner img {
