--- a/main.css
+++ b/main.css
@@ -4,6 +4,13 @@
   padding: 0;
 }
 
+.container {
+  max-width: 1170px;
+  padding: 0 15px;
+  margin: auto;
+  width: 100%;
+}
+
 header {
   background-color: #150e08;
   padding: 20px 0px;
@@ -44,4 +51,37 @@ header nav ul li:hover {
 
 .banner img {
   width: 100%;
+}
+
+.service {
+  width: 100%;
+  float: left;
+  background: #7fffd4;
+}
+.service .service-box {
+  width: 33%;
+  float: left;
+  padding: 15px;
+}
+.service .service-box .service-col {
+  background: black;
+  color: #fff;
+  padding: 15px;
+  border-radius: 5px;
+  font-family: sans-serif;
+}
+.service .service-box .service-col .service-content h2 {
+  font-size: 22px;
+  line-height: 40px;
+  letter-spacing: 0.8px;
+  margin-bottom: 20px;
+}
+.service .service-box .service-col .service-content p {
+  font-size: 17px;
+  line-height: 25px;
+}
+.service .service-box .service-col .service-content p:nth-child(3) {
+  font-size: 17px;
+  line-height: 25px;
+  margin-top: 20px;
 }/*# sourceMappingURL=main.css.map */
